css/style.css
/* ... */
.usefull__links {
  padding-left: 5rem;
}

.usefull__links a {
  font-size: 1.8rem;
  padding: 0.8rem 1.6rem;
}

.social__links {
  justify-content: flex-end;
}

.social__links a {
  /* background-color: blue; */
  /* display: block; */
  /* width: 20%; */
  padding: 0.8rem 1.6rem;
}

.social__links a:last-child {
  padding-right: 0;
}

.social__links a svg {
  /* width: 100%; */
}

/* footer */
.footer__text {
  background-color: #5a60ce;
  color: #fff;
  text-align: center;
  letter-spacing: 2px;
  font-weight: 300;
}

/* mobile__actions */
.mobile__actions {
  display: none;
}

.overflow {
  overflow: scroll;
}

/* update */
.nav__list-container {
  width: 80%;
}

@media (max-width: 1300px) {
  .card-item__info-heading,
  .price {
    font-size: 1.8rem;
    letter-spacing: 0;
  }

  .course__update {
    flex-direction: column;
  }

  .students {
    justify-content: flex-start;
  }

  .course__update::after {
    bottom: -34%;
  }
}

@media (max-width: 1250px) {
  .links__container {
    flex-direction: column;
    align-items: flex-end;
  }

  .main__des-heading {
    max-width: 100%;
  }
}

@media (max-width: 1200px) {
  .main__des {
    margin-top: 0rem;
  }
}

@media (max-width: 1140px) {
  .section__description,
  .section__card-container {
    grid-template-columns: repeat(2, 1fr);
    grid-auto-flow: row;
    row-gap: 4rem;
  }

  .section__descrition-card-3 a {
    align-self: flex-start;
    margin-top: -5rem;
  }

  /* overriding */
  .card-item__info-heading,
  .price {
    /* font-size: 2rem; */
    letter-spacing: 2px;
  }

  .course__update {
    flex-direction: row;
  }

  .students {
    justify-content: flex-end;
  }

  .course__update::after {
    bottom: -100%;
  }

  .section__slider-description p {
    max-width: 70%;
  }
}

@media (max-width: 1050px) {
  .hamburger-menu-container {
    display: flex;
    top: 50%;
    transform: translateY(-50%);
    z-index: 30;
    right: 3%;
  }

  .hamburger-menu {
    background-color: transparent;
  }

  .hamburger-menu div {
    background: #0088cc;
  }

  .hamburger-menu div::before {
    background-color: #0088cc;
  }

  .hamburger-menu div::after {
    background-color: #0088cc;
  }

  #check {
    right: 3%;
  }

  .nav-nav {
    padding-right: 6rem;

    /* position: relative; */
  }

  .nav__list,
  .nav__list-container {
    /* display: flex; */
    flex-direction: column;

    width: 30rem;
    position: absolute;
    top: 78%;
    right: 0;
    height: 89.8vh;

    align-items: flex-start;
    justify-content: flex-start;
    gap: 0;

    /* display: none; */
    overflow: hidden;
    z-index: -1;
  }

  .nav__list {
    top: 0;
    align-items: flex-end;
    background-color: #f5f4f9;
    opacity: 0;
    visibility: hidden;
    /* display: none; */
    transform: translateX(100%);
    transition: 0.3s all;

    z-index: 100;
  }

  .nav__list a {
    font-size: 1.8rem;
    padding: 0.8rem 3.2rem;
  }

  /* #check {
    display: block;
    background-color: red;
    opacity: 1;
  } */

  #check:checked ~ .nav-nav .nav__list {
    display: flex;
    z-index: 20;
    visibility: visible;
    opacity: 1;
    /* background-color: var(--color-light-white); */
    right: 0;
    transform: translateX(0%);
  }

  #check:checked ~ .nav-nav .nav__list-container {
    z-index: 10;
  }

  #check:checked ~ .overlay {
    display: block;
  }

  .action {
    flex-basis: auto;
  }

  /*  */

  .intro__image {
    right: 0;
    position: absolute;
    z-index: -1;
    width: 65%;
    top: 10%;
  }

  .section__intro {
    grid-template-columns: auto;
    justify-items: start;
  }

  /*  */

  .section__description,
  .section__card-container {
    grid-auto-flow: row;
    /* row-gap: 2.4rem; */
  }

  .section__description {
    row-gap: 0.8rem;
    grid-template-columns: repeat(1, 1fr);
  }

  .btn-courses {
    align-self: flex-start;
    margin-top: -4rem;
  }

  /* can be changed */
  .section__description {
    margin-top: 15rem;
  }

  .section__description {
    margin-top: 0;
  }

  .main__des {
    margin-top: 0;
  }

  /* mobile__actions */
  .mobile__actions {
    display: flex;
  }

  .overflow {
    overflow: hidden;
  }

  /* mobile actions */
  .nav__list .mobile__actions {
    flex: 1;
    width: 100%;
    justify-content: center;
    align-items: center;
  }

  .nav__list .mobile__actions .btn-logIn {
    display: none;
  }

  /* incase two button */
  .nav__list .mobile__actions > * {
    /* width: 100%; */
  }

  .action {
    display: none;
  }
}

@media (max-width: 950px) {
  .section__footer-content {
    flex-direction: column;
    align-items: flex-start;
  }

  .links__container {
    align-self: flex-end;
  }

  .links__container {
    width: 100%;
    flex-direction: column;
    align-items: flex-start;

    gap: 1.6rem;
  }

  .usefull__links {
    padding-left: 0;
    flex-direction: column;
    align-items: flex-start;
  }

  .usefull__links a {
    padding: 0.8rem 0rem;
  }

  .social__links {
    width: 100%;
    justify-content: center;
  }

  .main__des-heading {
    font-size: 3.4rem;
  }
}

@media (max-width: 900px) {
  .section__card-container {
    grid-template-columns: repeat(1, minmax(200px, 450px));
    justify-content: center;
    row-gap: 4rem;
  }

  .section__slider-description p {
    max-width: 100%;
  }
}

@media (max-width: 800px) {
  .intro__image {
    width: 53%;
  }

  .section__description {
    padding: 0;
  }

  .section,
  nav {
    padding: 1.6rem 3.2rem;
  }

  /* update */

  .overlay {
    top: 13.2%;
  }

  .nav__list-container {
    top: 90%;
  }
}

@media (max-width: 768px) {
  .section__intro {
    grid-auto-flow: row;
  }

  .intro__image {
    display: none;
    position: static;
    width: 100%;
  }

  .btn-courses {
    margin-top: -1rem;
  }

  .newsLetter-main__box {
    width: auto;
  }

  .main__des-heading {
    font-size: 3rem;
  }

  /* update */
}
/* ... */

